--- a/DIMENSIONS_CREATING_AND_MANIPULATING_TENSORS.ipynb
+++ b/DIMENSIONS_CREATING_AND_MANIPULATING_TENSORS.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPKNI1ke3/DdWE3Rre0EzIX",
+      "authorship_tag": "ABX9TyO4sSCPgeqbm7kVav95ZNfI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -57,6 +57,7 @@
       ],
       "source": [
         "#1.A.DIMENSIONS CREATING AND MANIPULATING TENSORS\n",
+        "#8-DECEMBER\n",
         "import tensorflow as tf\n",
         "primes = tf.constant([53, 59, 61, 67, 71, 73], dtype=tf.int32)\n",
         "print(\"primes:\", primes)\n",
